# timemachines

./: .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTE.md  CONTRIBUTE_BATCH_STYLE_MODELS.md  CONTRIBUTE_COLAB_NOTEBOOK.md  CONTRIBUTE_COMPUTE.md  CONTRIBUTE_COMPUTE_LOCAL.md  CONTRIBUTE_COMPUTE_LOCAL_ONE_LINE.md  CONTRIBUTE_COMPUTE_MUIDS.md  CONTRIBUTE_COMPUTE_PA.md  CONTRIBUTE_LIVE_DATA.md  CONTRIBUTE_ONLINE_STYLE_MODELS.md  CompareToNaive.ipynb  DATASCIENCE.md  FAQ.md  INSTALL.md  LICENSE  README.md  chatgpt_skater_arima.ipynb  pyproject.toml  regression.py  requirements.txt  run_stochastic_tests.py  setup.py  top_rated_models.ipynb  wiggling.ipynb
benchmarks/: README.md  RESEARCH.md  RESULTS.md  ablation_ewma.py  ablation_frontend.py  ablation_lag.py  ablation_river.py  additive_study.py  calibration_panel.py  detection_delay.py  fred.py  fred_anomaly.py  fred_anomaly_v2.py  frontend_loglik.py  frontend_run.py  granger2_study.py  granger_fred.py  granger_overnight.py  granger_study.py  loglik_check.py  mah_diagnostic.py  mah_repair_sweep.py  mah_ucr_ranking.py  martingale_fred.py  martingale_transform_study.py  regression_frontend.py  river_data_frontend.py  river_frontend.py  rosenblatt_sandwich.py  run_outlier_fleet.sh  sticky_ablation.py  sufficiency_blr.py  sufficiency_rls.py  sufficiency_study.py  tsb_ad_eval.py  tsb_ad_run.py  ucr_run.py
doc/: fixme.html
docs/: CNAME  README.md  academic.css  articles.md  capstone.md  composition.md  eloratings.md  ensembling.md  heritage.html  index.html  interface.md  map.md  papers.html  pit.html  resources.md  skaters.md  (+4 more)
(+493 files in other folders)
